@@ -4,4 +4,5 @@ package:
 
 build:
   script_env:
-    - UNDEF_VAR
+    - UNDEF_VAR1
+    - UNDEF_VAR2 : UNDEFINED
